@@ -1,4 +1,4 @@
-MPASM 03.20.02 Released        LIST11.ASM   11-21-2002  20:21:05         PAGE  1
+MPASM  5.47  /MNT/A1A5D1F2-0B60-42B4-9012-910   12-11-2012  22:29:36         PAGE  1
 
 
 LOC  OBJECT CODE     LINE SOURCE TEXT
@@ -9,25 +9,28 @@ LOC  OBJECT CODE     LINE SOURCE TEXT
                       00003 ;This file is used to check the generation of an INHX16 format file
                       00004 ;that has data above 7FFF.
                       00005 
-                      00006         list    p=17c44, f=inhx16
-                      00007 
-0000                  00008         org     0
-0000   1234 2345      00009         data    1234, 2345
+                      00006 ;;;; Begin: Changed in gputils
+                      00007 ;;;;    list    p=17c44, f=inhx16
+                      00008         list    p=17c44, f=inhx32
+                      00009 ;;;; End: Changed in gputils
                       00010 
-0020                  00011         org     20
-0020   9999           00012         fill    9999, 100
+0000                  00011         org     0
+0000   1234 2345      00012         data    1234, 2345
                       00013 
-7000                  00014         org     7000
-7000   7890 8901      00015         data    7890, 8901
+0020                  00014         org     20
+0020   9999           00015         fill    9999, 100
                       00016 
-8000                  00017         org     8000
-8000   3456 4567      00018         data    3456, 4567
+7000                  00017         org     7000
+7000   7890 8901      00018         data    7890, 8901
                       00019 
-FE00                  00020         org     0fe00
-FE00   5678 6789      00021         data    5678, 6789
+8000                  00020         org     8000
+8000   3456 4567      00021         data    3456, 4567
                       00022 
-                      00023         end
-MPASM 03.20.02 Released        LIST11.ASM   11-21-2002  20:21:05         PAGE  2
+FE00                  00023         org     0fe00
+FE00   5678 6789      00024         data    5678, 6789
+                      00025 
+                      00026         end
+MPASM  5.47  /MNT/A1A5D1F2-0B60-42B4-9012-910   12-11-2012  22:29:36         PAGE  2
 
 
 SYMBOL TABLE
