@@ -1,4 +1,10 @@
 2012-12-09  Borut Razem  <borutr@users.sourceforge.net>
+  * gpasm/testsuite/gpasm.mchip/asmfiles/list11.asm;
+    gpasm/testsuite/gpasm.mchip/listfiles/list11.lst,
+    gpasm/testsuite/gpasm.mchip/hexfiles/list11.hex:
+    regression tests adapted for gpasm
+
+2012-12-09  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/gperror.c, gpasm/lst.c, gpasm/directive.c:
     error message and listing enhancements
   * gpasm/testsuite/gpasm.mchip/asmfiles/hd642.asm,
